Production/Production/src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payment ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Source_Code__c</fullName>
        <label>Payment Source Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_to_be_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked if the payment does not belong to P2P or PP</description>
        <label>Payment to be deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{0}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>